# QtWebViewDemo

./: CMakeLists.txt  MyProjectJsProtocol.cpp  MyProjectJsProtocol.h  MyProjectWebView.cpp  MyProjectWebView.h  MyProjectWidget.cpp  MyProjectWidget.h  MyProjectWidget.ui  README.md  main.cpp
data/: index_copy.html
